force-app/main/default/objects/Knowledge_kav__c/Knowledge_kav__c.object-meta.xml
<CustomObject>
    <label>Knowledge</label>
    <nameField>
        <displayFormat>KL-{0000000000}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>