force-app/main/default/objects/Knowledge_kav__c/fields/ArchivedById__c.field-meta.xml
<CustomField>
    <fullName>ArchivedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Archived By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Archived By</relationshipLabel>
    <relationshipName>ArchivedByKnoledge</relationshipName>
    <type>Lookup</type>
</CustomField>