force-app/main/default/objects/Knowledge_kav__c/fields/ArticleArchivedById__c.field-meta.xml
<CustomField>
    <fullName>ArticleArchivedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Archived By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Article Archived By</relationshipLabel>
    <relationshipName>ArticleArchivedBy</relationshipName>
    <type>Lookup</type>
</CustomField>