force-app/main/default/objects/Knowledge_kav__c/fields/ArticleArchivedDate__c.field-meta.xml
<CustomField>
    <fullName>ArticleArchivedDate__c</fullName>
    <label>Article Archived Date</label>
    <type>DateTime</type>
</CustomField>