force-app/main/default/objects/Knowledge_kav__c/fields/ArticleCaseAttachCount__c.field-meta.xml
<CustomField>
    <fullName>ArticleCaseAttachCount__c</fullName>
    <label>Article Case Association Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>