force-app/main/default/objects/Knowledge_kav__c/fields/ArticleCreatedById__c.field-meta.xml
<CustomField>
    <fullName>ArticleCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Article Created By</relationshipLabel>
    <relationshipName>ArticleCreatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>