force-app/main/default/objects/Knowledge_kav__c/fields/ArticleCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ArticleCreatedDate__c</fullName>
    <label>Article Created Date</label>
    <type>DateTime</type>
</CustomField>