force-app/main/default/objects/Knowledge_kav__c/fields/ArticleTotalViewCount__c.field-meta.xml
<CustomField>
    <fullName>ArticleTotalViewCount__c</fullName>
    <label>Article Total View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>