force-app/main/default/objects/Knowledge_kav__c/fields/AssignedById__c.field-meta.xml
<CustomField>
    <fullName>AssignedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned By</relationshipLabel>
    <relationshipName>AssignedBy</relationshipName>
    <type>Lookup</type>
</CustomField>