force-app/main/default/objects/Knowledge_kav__c/fields/AssignedToId__c.field-meta.xml
<CustomField>
    <fullName>AssignedToId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned To</relationshipLabel>
    <relationshipName>AssignedTo</relationshipName>
    <type>Lookup</type>
</CustomField>