force-app/main/default/objects/Knowledge_kav__c/fields/AssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDate__c</fullName>
    <label>Assignment Date</label>
    <type>DateTime</type>
</CustomField>