force-app/main/default/objects/Knowledge_kav__c/fields/AssignmentDueDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDueDate__c</fullName>
    <label>Assignment Due Date</label>
    <type>DateTime</type>
</CustomField>