force-app/main/default/objects/Knowledge_kav__c/fields/AssignmentNote__c.field-meta.xml
<CustomField>
    <fullName>AssignmentNote__c</fullName>
    <label>Assignment Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>