force-app/main/default/objects/Knowledge_kav__c/fields/Body_Email__c.field-meta.xml
<CustomField>
    <fullName>Body_Email__c</fullName>
    <label>Body Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>