force-app/main/default/objects/Knowledge_kav__c/fields/Desk_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Desk_Article_Id__c</fullName>
    <label>Desk Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>