force-app/main/default/objects/Knowledge_kav__c/fields/FirstPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPublishedDate__c</fullName>
    <label>First Published Date</label>
    <type>DateTime</type>
</CustomField>