force-app/main/default/objects/Knowledge_kav__c/fields/IsLatestVersion__c.field-meta.xml
<CustomField>
    <fullName>IsLatestVersion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest Version</label>
    <type>Checkbox</type>
</CustomField>