force-app/main/default/objects/Knowledge_kav__c/fields/IsVisibleInApp__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible In Internal App</label>
    <type>Checkbox</type>
</CustomField>