force-app/main/default/objects/Knowledge_kav__c/fields/IsVisibleInCsp__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInCsp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Customer</label>
    <type>Checkbox</type>
</CustomField>