force-app/main/default/objects/Knowledge_kav__c/fields/IsVisibleInPkb__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInPkb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible In Public Knowledge Base</label>
    <type>Checkbox</type>
</CustomField>