force-app/main/default/objects/Knowledge_kav__c/fields/IsVisibleInPrm__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInPrm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Partner</label>
    <type>Checkbox</type>
</CustomField>