force-app/main/default/objects/Knowledge_kav__c/fields/KnowledgeArticleId__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeArticleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Article ID</label>
    <referenceTo>Knowledge_Article__c</referenceTo>
    <relationshipLabel>Knowledge Article</relationshipLabel>
    <relationshipName>KnowledgeArticle</relationshipName>
    <type>Lookup</type>
</CustomField>