force-app/main/default/objects/Knowledge_kav__c/fields/LargeLanguageModel__c.field-meta.xml
<CustomField>
    <fullName>LargeLanguageModel__c</fullName>
    <label>Large Language Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>