force-app/main/default/objects/Knowledge_kav__c/fields/LastPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPublishedDate__c</fullName>
    <label>Last Published Date</label>
    <type>DateTime</type>
</CustomField>