force-app/main/default/objects/Knowledge_kav__c/fields/MigratedToFromArticleVersion__c.field-meta.xml
<CustomField>
    <fullName>MigratedToFromArticleVersion__c</fullName>
    <label>Migrated Article Version Mapping</label>
    <length>15</length>
    <type>Text</type>
</CustomField>