force-app/main/default/objects/Knowledge_kav__c/fields/NextReviewDate__c.field-meta.xml
<CustomField>
    <fullName>NextReviewDate__c</fullName>
    <label>Next Review Date</label>
    <type>DateTime</type>
</CustomField>