force-app/main/default/objects/Knowledge_kav__c/fields/Publish_At__c.field-meta.xml
<CustomField>
    <fullName>Publish_At__c</fullName>
    <label>Publish At</label>
    <type>DateTime</type>
</CustomField>