force-app/main/default/objects/Knowledge_kav__c/fields/PublishStatus__c.field-meta.xml
<CustomField>
    <fullName>PublishStatus__c</fullName>
    <label>Publication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>