force-app/main/default/objects/Knowledge_kav__c/fields/Quickcode__c.field-meta.xml
<CustomField>
    <fullName>Quickcode__c</fullName>
    <label>Quickcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>