force-app/main/default/objects/Knowledge_kav__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Source</relationshipLabel>
    <relationshipName>Source</relationshipName>
    <type>Lookup</type>
</CustomField>