force-app/main/default/objects/Knowledge_kav__c/fields/UrlName__c.field-meta.xml
<CustomField>
    <fullName>UrlName__c</fullName>
    <label>URL Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>