force-app/main/default/objects/Knowledge_kav__c/listViews/Archived_Articles.listView-meta.xml
<ListView>
    <fullName>Archived_Articles</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PublishStatus__c</field>
        <operation>equals</operation>
        <value>Archived</value>
    </filters>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>Archived Articles</label>
</ListView>