force-app/main/default/objects/Knowledge_kav__c/listViews/Draft_Articles.listView-meta.xml
<ListView>
    <fullName>Draft_Articles</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PublishStatus__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>Draft Articles</label>
</ListView>